# cthpp

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md
cmake/: configurator.cmake
include/olokreaz/FileGeneration/: HeaderGenerator.hpp
src/: main.cpp  program_options.hpp
src/FileGeneration/: HeaderGeneration.cpp
src/Logic/: config.cpp  config.hpp  config_type.hpp  worker.cpp  worker.hpp
